--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     width: 100%;
     height: 3.5rem;
     background-color: var(--color-darker);
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.4);
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.4);
     z-index: 2;
 }
 
@@ -65,13 +65,30 @@ body {
     align-items: center;
     justify-content: center;
     background-color: var(--color-lighter);
-
+    
 }
 
 #welcome-section > h1 {
     font-family: 'Kanit', sans-serif;
     font-size: 2.5rem;
     color:var(--color-mid);
+}
+
+#animation {
+    animation-name: IamPavlina;
+    animation-duration: 10s;
+}
+
+@keyframes IamPavlina {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 #welcome-section > p {
@@ -86,3 +103,6 @@ body {
         font-size: 13px;
     }
 }
+
+
+ 
