--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ body {
 
 }
 
+/* Navigation bar */
+
 #navbar {
     position: fixed;
     display: flex;
@@ -46,7 +48,6 @@ body {
 
 #navbar li:hover {
     background-color: var(--color-mid);
-    
 }
 
 #navbar a {
@@ -55,8 +56,9 @@ body {
     text-decoration: none;
     color: var(--color-5);
     text-transform: uppercase;
-    
 }
+
+/* Welcome message */
 
 #welcome-section {
     height: 100vh;
@@ -65,7 +67,6 @@ body {
     align-items: center;
     justify-content: center;
     background-color: var(--color-lighter);
-    
 }
 
 #welcome-section > h1 {
@@ -74,7 +75,7 @@ body {
     color:var(--color-mid);
 }
 
-#animation {
+#IamPavlina {
     animation-name: IamPavlina;
     animation-duration: 10s;
 }
@@ -96,6 +97,45 @@ body {
     font-size: 1.25rem;
     padding-top:1em;
     color:var(--color-4);
+    opacity: 0;
+}
+
+#career {
+    animation-name: career;
+    animation-duration: 5s;
+    animation-delay: 2.5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes career {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+#so-far {
+    animation-name: so-far;
+    animation-duration: 5s;
+    animation-delay:5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes so-far {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @media only screen and (max-width: 640px) {
