--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 
-/* custom properties - colors */
+/* custom properties */
 :root {
     --color-mid: #a71d31;
     --color-darker: #3f0d12;
@@ -17,7 +17,9 @@
   }
 
 body {
-
+    background-color: var(--color-lighter);
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 /* Navigation bar */
@@ -38,6 +40,7 @@ body {
 
 #navbar ul {
     display: flex;
+    padding: 2rem;
 }
 
 #navbar li {
@@ -66,7 +69,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--color-lighter);
+    
 }
 
 #welcome-section > h1 {
@@ -137,6 +140,19 @@ body {
         opacity: 1;
     }
 }
+
+h2 {
+    font-family: 'Kanit', sans-serif;
+    font-size: 1.5rem;
+    color: var(--color-mid);
+    text-transform: uppercase;
+    text-align: center;
+    height: 100vh;
+    padding-top: 5rem;
+}
+
+
+
 
 @media only screen and (max-width: 640px) {
     :root {
