--- a/styles.css
+++ b/styles.css
@@ -141,14 +141,57 @@ body {
     }
 }
 
+section {
+    height: 100vh;
+}
+
 h2 {
     font-family: 'Kanit', sans-serif;
     font-size: 1.5rem;
     color: var(--color-mid);
     text-transform: uppercase;
     text-align: center;
-    height: 100vh;
     padding-top: 5rem;
+    padding-bottom:1rem;
+}
+
+#wrapper {
+    display: flex;
+    width: 100%;
+    height: 75%;     
+    flex-flow: wrap;
+    align-items: stretch;
+}
+
+.textbox {
+    min-width: 15rem;
+    max-width: 25rem;
+    padding: 0.5rem;
+    flex: 1 0 31%;
+    margin: 0.5rem auto;
+    color:var(--color-darker);
+    background-color: var(--color-5);
+    border: 0.2rem double var(--color-mid);
+    border-radius: 0.5rem;
+    font-family: Geneva, sans-serif;
+    line-height: 1.4rem;
+    margin: 1%;
+    transition: transform 0.2s, background-color 0.2s; 
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.textbox:hover {
+    transform: scale(1.05);
+    background-color: var(--color-lighter);
+}
+
+h3 {
+    font-family: 'Kanit', sans-serif;
+    padding-bottom: 0.5rem;
 }
 
 
